fix vertical alignment

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,8 @@
 
 
 .pubscontainer {
+    display: flex;
+    align-items: center;
     width: 850px;
     margin: auto;
 }
